styles front end

--- a/client/src/pages/Contact/Contact.css
+++ b/client/src/pages/Contact/Contact.css
@@ -1,6 +1,6 @@
-.info {
+.contact {
     text-align: center;
     border-style: solid;
     border-width: 1px;
-    height: 50vh;
+    height: 45vh;
   }
