--- a/client/src/pages/Contact/Contact.css
+++ b/client/src/pages/Contact/Contact.css
@@ -1,6 +1,20 @@
 .contact {
-    text-align: center;
-    border-style: solid;
-    border-width: 1px;
-    height: 45vh;
-  }
+  text-align: center;
+  border-style: solid;
+  border-width: 1px;
+  height: 45vh;
+  position: relative;
+}
+
+.contactCenter {
+  display: inline-block;
+  vertical-align: middle;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 100%;
+  height: 30%;
+}
