--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -5,20 +5,48 @@
   height: 90vh;
 }
 
-.news {
+.news, .upcoming {
   text-align: center;
   border-style: solid;
   border-width: 1px;
   height: 45vh;
+  position: relative;
 }
 
-.upcoming {
+/* .upcoming {
   text-align: center;
   border-style: solid;
   border-width: 1px;
   height: 44.7vh;
-}
+  position: relative;
+} */
 
 img {
   height: 500px;
 }
+
+.newsFeed, .upcomingFeed {
+  display: inline-block;
+  vertical-align: middle;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 100%;
+  height: 30%;
+}
+
+/* .upcomingFeed {
+  display: inline-block;
+  vertical-align: middle;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 100%;
+  height: 30%;
+} */
