--- a/client/src/pages/Artists/Artists.css
+++ b/client/src/pages/Artists/Artists.css
@@ -1,4 +1,37 @@
 .artists {
-    text-align: center;
-    height: 100vh;
-  }
+  text-align: center;
+  border-style: solid;
+  border-width: 1px;
+  height: 90vh;
+  position: relative;
+}
+
+.artistsList {
+  display: inline-block;
+  vertical-align: middle;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 100%;
+  height: 30%;
+}
+
+h1 {
+  outline: none;
+  text-decoration: none;
+}
+
+a:link {
+  color: black;
+  text-decoration:  none;
+
+}
+
+a:visited {
+  color: black;
+  text-decoration:  none;
+
+}
